# qt-heif-image-plugin

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
